[gd_scene load_steps=5 format=3 uid="uid://vxmmx38l3bud"]

[ext_resource type="Script" uid="uid://by0x5g6ppujgg" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bd1xqrvd4xspk" path="res://icon.svg" id="2_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_qhqgy"]
radius = 91.0494

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qhqgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g2els")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_qhqgy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WeaponHolder" type="Node2D" parent="."]

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
